--- a/app/src/main/res/layout/activity_currency.xml
+++ b/app/src/main/res/layout/activity_currency.xml
@@ -24,6 +24,22 @@
 
 
         <Button
+            android:id="@+id/id_prediction"
+            android:layout_width="74dp"
+            android:layout_height="32dp"
+            android:layout_marginBottom="1dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginStart="300dp"
+            android:layout_marginTop="16dp"
+            android:onClick="prediction"
+            android:text="Prediction"
+            android:textSize="8sp"
+            app:layout_constraintBottom_toTopOf="@+id/signout_btn"
+            app:layout_constraintEnd_toStartOf="@+id/header"
+            app:layout_constraintStart_toEndOf="@+id/go_button"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
             android:id="@+id/go_button"
             android:layout_width="74dp"
             android:layout_height="32dp"
@@ -75,19 +91,17 @@
 
         <Button
             android:id="@+id/signout_btn"
-            android:layout_width="89dp"
-            android:layout_height="36dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="74dp"
+            android:layout_height="32dp"
+            android:layout_marginBottom="1dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginStart="71dp"
             android:onClick="logout"
             android:text="Signout"
+            android:textSize="8sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.8"
-            app:layout_constraintStart_toEndOf="@+id/go_button"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/price_text" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
