--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -8,7 +8,7 @@
     tools:layout_editor_absoluteY="81dp">
 
     <TextView
-        android:id="@+id/header_text"
+        android:id="@+id/currency_text"
         android:layout_width="342dp"
         android:layout_height="40dp"
         android:layout_marginEnd="9dp"
@@ -28,7 +28,7 @@
         android:layout_marginTop="23dp"
         android:entries="@array/currency_array"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header_text" />
+        app:layout_constraintTop_toBottomOf="@+id/currency_text" />
 
     <Button
         android:id="@+id/info_button"
@@ -41,7 +41,7 @@
         android:text="Get Info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/info_spinner"
-        app:layout_constraintTop_toBottomOf="@+id/header_text" />
+        app:layout_constraintTop_toBottomOf="@+id/currency_text" />
 
     <TextView
         android:id="@+id/info_text"
