--- a/app/src/main/res/layout/activity_twitter.xml
+++ b/app/src/main/res/layout/activity_twitter.xml
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toBottomOf="@+id/go_button" />
 
     <TextView
-        android:id="@+id/header_text"
+        android:id="@+id/currency_text"
         android:layout_width="245dp"
         android:layout_height="41dp"
         android:layout_marginEnd="8dp"
@@ -59,7 +59,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.247"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header_text" />
+        app:layout_constraintTop_toBottomOf="@+id/currency_text" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/header"
